2001-08-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* ports.c, ports.h, fprots.c, gc.c, ioext.c: Replaced
	"scm_t_portable" with "scm_port_table" which was an artifact from
	the great "scm_*_t -> scm_t_" renaming.

2001-08-25  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* gc_os_dep.c (GC_noop1): Move before `GC_find_limit' where it is
	used; nfc.  Thanks to Bill Schottstaedt.

	* validate.h (SCM_VALIDATE_USHORT_COPY, SCM_VALIDATE_SHORT_COPY,
	SCM_VALIDATE_UINT_COPY, SCM_VALIDATE_INT_COPY): New macros.
	Thanks to Chris Cramer.

2001-08-17  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* gc.c: Fix omission bug: Add `heap_segment' forward decl
	(proto) in the case when either `GUILE_DEBUG' or
	`GUILE_DEBUG_FREELIST' preprocessor symbols are defined.

	(map_free_list): Fix typo: Ref `f' correctly.

	Thanks to Chris Cramer.

2001-08-15  Rob Browning  <rlb@defaultvalue.org>

	* Makefile.am (libguile_la_LDFLAGS): use libtool interface version
	variables.
	(libpath.h): change libguileversion to libguileinterface.

2001-08-07  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_DIST): Distribute ChangeLog-1996-1999 and
	ChangeLog-2000.  Thanks to Daniel Skarda!

2001-08-07  Michael Livshin  <mlivshin@bigfoot.com>

	* guile-snarf-docs-texi.in: don't call the tokenizer here, we now
	do it from the Makefile.

	* Makefile.am: rearrange the snarfing slightly, so that .doc files
	are of a reasonable size.

2001-08-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* chars.c (scm_char_alphabetic_p, scm_char_numeric_p,
	scm_char_whitespace_p, scm_char_upper_case_p,
	scm_char_lower_case_p, scm_char_is_both_p): Do not require
	characters to fulfill isascii in addition to the primary
	predicate.

2001-07-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* gc_os_dep.c (GC_noop1): Moved into the same #if/#endif context
	where it is needed.

2001-07-25  Gary Houston  <ghouston@arglist.com>

	* numbers.c (scm_logand, scm_logior, scm_logxor): adjusted the